--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
@@ -13,6 +14,7 @@
     "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-rainbow-components": "^1.29.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
