--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@testing-library/user-event": "^13.5.0",
     "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "date-fns": "^2.28.0",
-    "firebase": "^9.6.6",
+    "firebase": "^9.6.7",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-rainbow-components": "^1.29.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
